# FFmpeg-learning

app/: CMakeLists.txt  build.gradle  build_ffmpeg.sh  c.mpeg4
app/src/androidTest/java/com/example/whensunset/ffmpeg_learning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/whensunset/ffmpeg_learning/: FFmpegPlayer.java  GameActivity.java  MainActivity.java  TextureCameraPreviewActivity.java
app/src/main/jni/ffmpeg/include/libavcodec/: avcodec.h
app/src/main/jni/ffmpeg/include/libavfilter/: avfilter.h
app/src/main/jni/ffmpeg/include/libavformat/: avformat.h  avio.h
app/src/main/jni/ffmpeg/include/libavutil/: base64.h  file.h  frame.h  imgutils.h  log.h  mem.h
app/src/main/jni/ffmpeg/my/: decode.cpp  ffmpeg_sample.h  ffmpeg_sample_five.cpp  ffmpeg_sample_four.cpp  ffmpeg_sample_one.cpp  ffmpeg_sample_six.cpp  ffmpeg_sample_three.cpp  ffmpeg_sample_two.cpp  player.cpp  stream.cpp
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_texture_camera_preview.xml  content_texture_camera_preview.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/whensunset/ffmpeg_learning/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
